// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EscrowedPaymentReminderSummaryNotification renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
        "width": "100%",
      },
      Object {
        "borderColor": "#EEEEEE",
        "borderRadius": 3,
        "borderWidth": 1,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "paddingRight": 16,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/mobile/src/images/Invite-Friends.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Bold",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      escrowedPaymentReminderWithCount_plural
    </Text>
    <View>
      <View
        style={
          Object {
            "justifyContent": "space-between",
            "minHeight": 70,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 5,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              ellipsizeMode="middle"
              numberOfLines={1}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                  ]
                }
              >
                +491522345678
                 - 
                test message
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                    Object {
                      "fontFamily": "Hind-SemiBold",
                    },
                  ]
                }
              >
                 
                $
                7
              </Text>
            </Text>
            <Text
              ellipsizeMode="middle"
              numberOfLines={1}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                  ]
                }
              >
                +491522345678
                 - 
                test message
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                    Object {
                      "fontFamily": "Hind-SemiBold",
                    },
                  ]
                }
              >
                 
                $
                7
              </Text>
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 15,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackgroundBorderless",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "paddingEnd": 15,
                  },
                ]
              }
            >
              review
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`EscrowedPaymentReminderSummaryNotification when more 1 requests renders just it alone 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
        "width": "100%",
      },
      Object {
        "borderColor": "#EEEEEE",
        "borderRadius": 3,
        "borderWidth": 1,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "paddingRight": 16,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/mobile/src/images/Invite-Friends.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Bold",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      escrowedPaymentReminder
    </Text>
    <View>
      <View
        style={
          Object {
            "justifyContent": "space-between",
            "minHeight": 70,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 5,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              ellipsizeMode="middle"
              numberOfLines={1}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                  ]
                }
              >
                +491522345678
                 - 
                test message
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                    Object {
                      "fontFamily": "Hind-SemiBold",
                    },
                  ]
                }
              >
                 
                $
                7
              </Text>
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 15,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackgroundBorderless",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "paddingEnd": 15,
                  },
                ]
              }
            >
              review
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`EscrowedPaymentReminderSummaryNotification when more than 2 requests renders just two 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
        "width": "100%",
      },
      Object {
        "borderColor": "#EEEEEE",
        "borderRadius": 3,
        "borderWidth": 1,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "paddingRight": 16,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/mobile/src/images/Invite-Friends.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Bold",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      escrowedPaymentReminderWithCount_plural
    </Text>
    <View>
      <View
        style={
          Object {
            "justifyContent": "space-between",
            "minHeight": 70,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 5,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              ellipsizeMode="middle"
              numberOfLines={1}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                  ]
                }
              >
                +491522345678
                 - 
                test message
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                    Object {
                      "fontFamily": "Hind-SemiBold",
                    },
                  ]
                }
              >
                 
                $
                7
              </Text>
            </Text>
            <Text
              ellipsizeMode="middle"
              numberOfLines={1}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                  ]
                }
              >
                +491522345678
                 - 
                test message
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                    Object {
                      "fontFamily": "Hind-SemiBold",
                    },
                  ]
                }
              >
                 
                $
                7
              </Text>
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 15,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackgroundBorderless",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "paddingEnd": 15,
                  },
                ]
              }
            >
              review
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
